test/libyul/yulSyntaxTests/invalid/jump_disallowed.yul
{
    jump(2)
}
// ----
// DeclarationError 4619: (6-10): Function not found.
